--- a/drop-down/index.html
+++ b/drop-down/index.html
@@ -5,45 +5,79 @@
   <title>Drop-down Widget</title>
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background-color: var(--grist-theme-page-bg);
-      color: var(--grist-theme-text);
-    }
-    #container {
-      position: relative;
-      height: 100%;
-    }
-    #dropdown {
-      width: 100%;
-      box-sizing: border-box;
-      margin: 0;
-      padding: 2px;
-      height: 100%;
-      background-color: var(--grist-theme-page-panels-main-panel-bg);
-      border: 1px solid var(--grist-theme-table-body-border);
-      color: var(--grist-theme-text);
-    }
-    #error {
-      display: none;
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 50%;
-      height: 100%;
-      background: rgba(208, 2, 27, 0.8);
-      color: white;
-      padding: 2px;
-      font-size: 12px;
-      overflow-y: auto;
-      box-sizing: border-box;
-    }
-    #dropdown:focus {
-      outline: 2px solid var(--grist-theme-cursor);
-    }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: white;
+  color: #212121;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+}
+
+#container {
+  position: relative;
+  height: 100%;
+}
+
+#dropdown {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 2px 0;
+  padding: 8px 12px;
+  height: auto;
+  min-height: 40px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  color: #212121;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  outline: none;
+  transition: all 0.2s ease;
+}
+
+#dropdown:hover {
+  border-color: #bdbdbd;
+}
+
+#dropdown:focus {
+  border-color: #1976d2;
+  box-shadow: 0 0 0 1px rgba(25, 118, 210, 0.2);
+  background-color: white;
+}
+
+#dropdown:disabled {
+  background-color: #f5f5f5;
+  color: #9e9e9e;
+  border-color: #e0e0e0;
+  cursor: not-allowed;
+}
+
+/* Style pour les options */
+#dropdown option {
+  padding: 4px 8px;
+  background-color: white;
+  color: #212121;
+}
+
+#error {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(208, 2, 27, 0.1);
+  border: 1px solid rgba(208, 2, 27, 0.3);
+  border-radius: 4px;
+  color: #d0021b;
+  padding: 8px;
+  font-size: 12px;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
   </style>
 </head>
 <body>
